plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "7.1.2"
}

project.version = '0.4.0'

sourceCompatibility = 8
mainClassName = 'minicraft.mods.LoaderInitialization'
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

repositories {
    mavenCentral()

    maven {
        url "https://nexus.velocitypowered.com/repository/maven-public/"
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:23.0.0'
    implementation 'org.json:json:20211205'
    implementation 'com.konghq:unirest-java:3.13.7'
    implementation 'org.tinylog:tinylog-api:2.4.1'
    implementation 'org.tinylog:tinylog-impl:2.4.1'
    implementation "org.spongepowered:mixin:0.8.5"
    implementation "org.spongepowered:mixin:0.8.5:processor"
    annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
	implementation 'org.ow2.sat4j:org.ow2.sat4j.core:2.3.6'
	implementation 'org.ow2.sat4j:org.ow2.sat4j.pb:2.3.6'
}

java {
    withSourcesJar()
}

shadowJar {
    archivesBaseName = 'minicraft_plus_mods-2.1.3'
    archiveClassifier.set('')

    manifest {
        attributes(
                'Main-Class': mainClassName,
                'Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'SplashScreen-Image': "Minicraft_Splash_Screen_3.png")
    }
}
